<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/page_padding"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/library_title"
            android:text="@string/library_title"
            style="@style/MainTitle" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_below="@+id/library_title"
            android:visibility="invisible"
            style="@style/CardView.Custom"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/library_height"
                    style="@style/CardTextViewTitle"
                    android:text="@string/height" />

                <TextView
                    android:id="@+id/library_height_value"
                    style="@style/CardTextViewValue"
                    android:layout_toEndOf="@+id/library_height"
                    tools:text="2.2m" />

                <TextView
                    android:id="@+id/library_width"
                    style="@style/CardTextViewTitle"
                    android:layout_below="@id/library_height"
                    android:text="@string/width" />

                <TextView
                    android:id="@+id/library_width_value"
                    style="@style/CardTextViewValue"
                    android:layout_below="@+id/library_height"
                    android:layout_marginBottom="@dimen/card_tv_mb"
                    android:layout_toEndOf="@+id/library_width"
                    tools:text="2.4m" />

                <Button
                    android:id="@+id/library_rescan_button"
                    style="@style/CardButton"
                    android:layout_below="@id/library_height"
                    android:onClick="libraryScan"
                    android:text="@string/library_rescan" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/library_analyze_title"
            android:layout_below="@id/card_view"
            android:text="@string/library_title_analyze"
            style="@style/MainTitle"
            android:layout_marginTop="@dimen/main_title_margin"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_analyze_library"
            style="@style/CardView.Custom"
            android:layout_below="@+id/library_analyze_title"
            android:visibility="visible"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/library_analyze_description"
                    style="@style/CardTextViewTitle"
                    android:layout_width="wrap_content"
                    android:text="@string/library_unsaved" />

                <Button
                    android:id="@+id/library_analyze_button"
                    style="@style/CardButton"
                    android:enabled="false"
                    android:layout_below="@id/library_analyze_description"
                    android:onClick="libraryAnalyze"
                    android:text="@string/library_analyze" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/library_empty"
            android:layout_below="@id/library_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/library_empty_description"
                android:text="@string/library_unsaved_scan"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginBottom="@dimen/main_title_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/scan_library"
                android:text="@string/library_scan"
                android:onClick="libraryScan"
                android:layout_below="@id/library_empty_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/books_title"
            android:layout_below="@id/card_view_analyze_library"
            android:text="@string/book_scan"
            style="@style/MainTitle"
            android:layout_marginTop="@dimen/main_title_margin"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_books"
            android:layout_below="@+id/books_title"
            android:visibility="visible"
            style="@style/CardView.Custom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/books_total"
                    android:text="@string/total_scans"
                    style="@style/CardTextViewTitle"/>

                <TextView
                    android:id="@+id/books_total_value"
                    android:layout_toEndOf="@+id/books_total"
                    style="@style/CardTextViewValue"
                    tools:text="20" />

                <TextView
                    android:id="@+id/books_recent"
                    android:layout_below="@id/books_total"
                    android:text="@string/recent_book"
                    style="@style/CardTextViewTitle"/>

                <TextView
                    android:id="@+id/books_recent_value"
                    android:layout_below="@+id/books_total"
                    tools:text="The art of deception"
                    android:layout_toEndOf="@+id/books_recent"
                    style="@style/CardTextViewValue" />

                <Button
                    android:id="@+id/books_add"
                    android:layout_below="@id/books_recent"
                    android:text="@string/book_scan"
                    android:onClick="bookScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>